--- a/style.css
+++ b/style.css
@@ -4,13 +4,24 @@
     font-family: 'Roboto', sans-serif;
 }
 
-h6 {
-    font-size: 24px;
- }
- 
 h1 {
     font-size: 48px;
     font-weight: bolder;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+h6 {
+    font-size: 24px;
+ }
+
+header p {
+    color: #E5E7EB;
+    font-size: 18px;
 }
 
 header {
@@ -19,27 +30,6 @@ header {
     color: #F9FAF8;
 }
 
-header p {
-    color: #E5E7EB;
-    font-size: 18px;
-}
-
-.header, .hero{
-    display:flex;
-    /* border: 2px solid red;  */
-}
-
-.header {
-    padding: 10px 180px 50px 180px;
-    /* border: 2px solid purple;   */
-}
-
-.hero {
-    padding: 20px 180px 100px 180px;
-     /* border: 2px solid purple;   */
-    justify-content: space-between;
-         
-}
 
 nav {
     /* border: 2px solid green;  */
@@ -60,14 +50,30 @@ li {
     font-size: 18px;
 }
 
-.hero-text {
-    /* border: 2px solid palegreen; */
-    width: 40%;
-    
-   
+.header, .hero{
+    display:flex;
+    /* border: 2px solid red;  */
 }
 
-button {
+.header {
+    padding: 10px 180px 50px 180px;
+    /* border: 2px solid purple;   */
+}
+
+.hero {
+    padding: 20px 180px 100px 180px;
+    justify-content: space-between;
+    
+    /* border: 2px solid purple;   */
+}
+
+.hero-text {
+    width: 50%;
+    
+    /* border: 2px solid palegreen; */
+}
+
+.hero button {
     margin-top: 10px;
     background: #3882F6;
     color: #F9FAF8;
@@ -76,10 +82,43 @@ button {
     padding: 8px 25px;
 }
 
-img { 
+.hero img { 
+    width: 40%;
+    
     /* border: 2px solid palegreen; */
-    width: 50%;
-        
+}
+
+.section-two {
+    text-align: center;
+    padding: 30px 0 100px 0;
+
+    border: 2px solid purple;
+}
+
+.container  {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+
+    /* border: 2px solid red;  */
+}
+
+.img-container {
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    padding-top: 30px;
+    
+    /* border: 2px solid purple;  */
+}
+
+.container img {
+    height: 150px;
+    width: 100%;
+    object-fit: cover;
+    border: 3px solid #3882F6;
+    border-radius: 8px;
+    
 }
 
 
