--- a/style.css
+++ b/style.css
@@ -25,14 +25,12 @@ header p {
 }
 
 header {
-    /* border: 2px solid blue;  */
     background: #1F2937;
     color: #F9FAF8;
 }
 
 
 nav {
-    /* border: 2px solid green;  */
     margin-left: auto;
 }
 
@@ -41,8 +39,6 @@ ul {
     display:flex;
     list-style-type: none;
     gap: 25px;
-    
-    /* border: 2px solid red;  */
 }
 
 li {
@@ -52,25 +48,19 @@ li {
 
 .header, .hero{
     display:flex;
-    /* border: 2px solid red;  */
 }
 
 .header {
     padding: 10px 180px 50px 180px;
-    /* border: 2px solid purple;   */
 }
 
 .hero {
     padding: 20px 180px 100px 180px;
     justify-content: space-between;
-    
-    /* border: 2px solid purple;   */
 }
 
 .hero-text {
     width: 50%;
-    
-    /* border: 2px solid palegreen; */
 }
 
 .hero button {
@@ -84,23 +74,17 @@ li {
 
 .hero img { 
     width: 40%;
-    
-    /* border: 2px solid palegreen; */
 }
 
 .section-two {
     text-align: center;
     padding: 30px 0 100px 0;
-
-    border: 2px solid purple;
 }
 
 .container  {
     display: flex;
     justify-content: center;
     gap: 30px;
-
-    /* border: 2px solid red;  */
 }
 
 .img-container {
@@ -108,8 +92,6 @@ li {
     flex-direction: column;
     width: 150px;
     padding-top: 30px;
-    
-    /* border: 2px solid purple;  */
 }
 
 .container img {
@@ -118,9 +100,28 @@ li {
     object-fit: cover;
     border: 3px solid #3882F6;
     border-radius: 8px;
-    
 }
 
+.section-three {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   background: #E5E7EB;
+   padding: 100px 0;
+}
 
+.quote {
+    display: flex;
+    width: 50%;
+    font-size: 36px;
+    font-weight: 200;
+    font-style: italic;
+    color: #1F2937;
+}
 
-
+.author {
+    display: flex;
+    justify-content: flex-end;
+    width: 50%;
+    font-weight: bolder;
+}
